# voice-engine

./: .gitignore  Cargo.toml  README.md  vad_perf_opt.md
fixtures/: base64noise.txt
src/: event.rs  lib.rs
src/media/: engine.rs
src/media/codecs/: g722.rs  mod.rs  pcma.rs  pcmu.rs
src/media/tests/: denoiser.rs
src/media/track/: file.rs
src/media/vad/: benchmark_all.rs  mod.rs  silero.rs  simd.rs  tests.rs  tiny_silero.rs  tiny_ten.rs  utils.rs
tools/: onnx_to_weight.py
