[package]
name = "voice-engine"
version = "0.3.20"
edition = "2024"
authors = ["jinti<shenjindi@fourz.cn>"]
description = "A voip voice processing engine in Rust"
license = "MIT"
repository = "https://github.com/restsend/voice-engine"
readme = "README.md"
keywords = ["sip", "voip", "telephony", "webrtc"]
categories = ["multimedia"]

[features]
opus = ["dep:opusic-sys"]
g729 = ["dep:g729-sys"]
default = ["opus", "g729"]
not_vad = []

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.88"
async-stream = "0.3.6"
g729-sys = { version = "0.1.2", optional = true }
opusic-sys = { version = "0.5.8", optional = true }
ndarray = "0.16.1"
webrtc = "0.14.0"
realfft = "3.3"
rmp3 = "0.3"
hound = "3.5.1"
rsip = "0.4.0"
reqwest = { version = "0.12.25", features = [
    "json",
    "stream",
    "rustls-tls",
    "multipart",
] }
serde = { version = "1.0.228", features = ["derive"] }
glob = "0.3.3"
serde_json = "1.0.143"
serde_with = "3"
tokio = { version = "1.47.1", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.17", features = ["net", "sync"] }
tokio-tungstenite = { version = "0.28.0", features = [
    "rustls-tls-native-roots",
] }
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2"
unic-emoji = "0.9.0"
url = "2.5.7"
tempfile = "3.23.0"
bytes = "1.10.1"
futures = "0.3.31"
nnnoiseless = { version = "0.5", features = ["default"] }
rsipstack = "0.2.93"
#rsipstack = { path = "../rsipstack" }
base64 = "0.22.1"
rand = "0.9.2"
once_cell = "1.21.3"
sha2 = "0.10.9"
hex = "0.4.3"
uuid = { version = "1.19.0", features = ["v4"] }
rubato = "0.16.2"
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"
regex = "1.12.2"
ring = "0.17.14"
urlencoding = "2.1.3"
get_if_addrs = "0.5.3"
http = "1.3.1"
rustls = { version = "0.23.33", features = ["ring"] }
byteorder = "1.5.0"


[dev-dependencies]
tokio-test = "0.4"
mockall = "0.14.0"
warp = { version = "0.4.1", features = ["server", "websocket"] }
portpicker = "0.1.1"
dotenv = "0.15"
